--- a/Miki/Languages/en-US.resx
+++ b/Miki/Languages/en-US.resx
@@ -690,7 +690,7 @@ Fuzzy</comment>
     <value>Links</value>
   </data>
   <data name="miki_module_general_info_made_by_description" xml:space="preserve">
-    <value>Special thanks to: Florestina, Mei, Rappy, Rie, Rosie</value>
+    <value>Special thanks to:</value>
   </data>
   <data name="miki_module_general_info_made_by_header" xml:space="preserve">
     <value>**Made by:** Veld</value>
