--- a/Miki/Languages/da-DK.resx
+++ b/Miki/Languages/da-DK.resx
@@ -2091,7 +2091,7 @@ For at give nogen et bedre omdømme, brug `&gt;rep &lt;mention&gt; [&quot;all&qu
   <data name="term_roles" xml:space="preserve">
     <value>Roller</value>
   </data>
-  <data name="social_patreon" xml:space="preserve">
+  <data name="socMiki.Frameworkl_patreon" xml:space="preserve">
     <value>Patreon</value>
   </data>
   <data name="error_role_forbidden" xml:space="preserve">
