--- a/Miki/Languages/tl-PH.resx
+++ b/Miki/Languages/tl-PH.resx
@@ -926,6 +926,9 @@ Fuzzy</comment>
   <data name="miki_marriage_declined" xml:space="preserve">
     <value></value>
   </data>
+  <data name="miki_marriage_no_mention" xml:space="preserve">
+    <value></value>
+  </data>
   <data name="miki_marriage_null" xml:space="preserve">
     <value></value>
   </data>
@@ -1884,8 +1887,70 @@ Fuzzy</comment>
   <data name="term_roles" xml:space="preserve">
     <value></value>
   </data>
-  <data name="miki_Marriage_no_mention" xml:space="preserve">
+  <data name="socMiki.Frameworkl_patreon" xml:space="preserve">
     <value></value>
-    <comment>I changed it from saying decline to reject as reject seems more fitting.</comment>
+  </data>
+  <data name="error_role_forbidden" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="error_role_null" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="term_available" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="error_role_required" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="error_argument_null" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="error_no_reminders" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="error_reminder_null" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="term_ok" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="reminders" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="reminder_cancel" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="reminder_cancelled_all" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="reminder_desc_add" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="reminder_desc_clear" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="reminder_desc_list" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="reminder_help_add" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="reminder_help_clear" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="reminder_help_description" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="reminder_help_list" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="reminder_cancelled" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="error_role_level_low" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="error_role_already_given" xml:space="preserve">
+    <value></value>
   </data>
 </root>
