--- a/Miki/Languages/en-US.resx
+++ b/Miki/Languages/en-US.resx
@@ -1942,7 +1942,7 @@ To give someone reputation, do `&gt;rep &lt;mention&gt; [&quot;all&quot;|amount]
   <data name="term_roles" xml:space="preserve">
     <value>Roles</value>
   </data>
-  <data name="socMiki.Frameworkl_patreon" xml:space="preserve">
+  <data name="social_patreon" xml:space="preserve">
     <value>Patreon</value>
   </data>
   <data name="error_role_forbidden" xml:space="preserve">
