--- a/Miki/Languages/fr-FR.resx
+++ b/Miki/Languages/fr-FR.resx
@@ -2017,7 +2017,7 @@ Tout les tags sont trouvables ici: &lt;https://safebooru.org/index.php?page=tags
   <data name="term_roles" xml:space="preserve">
     <value></value>
   </data>
-  <data name="socMiki.Frameworkl_patreon" xml:space="preserve">
+  <data name="social_patreon" xml:space="preserve">
     <value></value>
   </data>
   <data name="error_role_forbidden" xml:space="preserve">
