--- a/Miki/Languages/he-HE.resx
+++ b/Miki/Languages/he-HE.resx
@@ -1889,7 +1889,7 @@
   <data name="term_roles" xml:space="preserve">
     <value></value>
   </data>
-  <data name="socMiki.Frameworkl_patreon" xml:space="preserve">
+  <data name="social_patreon" xml:space="preserve">
     <value></value>
   </data>
   <data name="error_role_forbidden" xml:space="preserve">
