--- a/Miki/Languages/hi-HI.resx
+++ b/Miki/Languages/hi-HI.resx
@@ -1886,7 +1886,7 @@
   <data name="term_roles" xml:space="preserve">
     <value></value>
   </data>
-  <data name="socMiki.Frameworkl_patreon" xml:space="preserve">
+  <data name="social_patreon" xml:space="preserve">
     <value></value>
   </data>
   <data name="error_role_forbidden" xml:space="preserve">
