--- a/Miki/Languages/hu-HU.resx
+++ b/Miki/Languages/hu-HU.resx
@@ -1994,7 +1994,7 @@ Hogy másnak hírnevet adj, írd be, hogy `&gt;rep &lt;mention&gt; [&quot;össze
   <data name="term_roles" xml:space="preserve">
     <value></value>
   </data>
-  <data name="socMiki.Frameworkl_patreon" xml:space="preserve">
+  <data name="social_patreon" xml:space="preserve">
     <value></value>
   </data>
   <data name="error_role_forbidden" xml:space="preserve">
