--- a/Miki/Languages/it-IT.resx
+++ b/Miki/Languages/it-IT.resx
@@ -1892,7 +1892,7 @@
   <data name="term_roles" xml:space="preserve">
     <value></value>
   </data>
-  <data name="socMiki.Frameworkl_patreon" xml:space="preserve">
+  <data name="social_patreon" xml:space="preserve">
     <value></value>
   </data>
   <data name="error_role_forbidden" xml:space="preserve">
