--- a/Miki/Languages/ms-MS.resx
+++ b/Miki/Languages/ms-MS.resx
@@ -1887,7 +1887,7 @@ Kami akan menghantarkan log dan arahan melalui mesej.</value>
   <data name="term_roles" xml:space="preserve">
     <value></value>
   </data>
-  <data name="socMiki.Frameworkl_patreon" xml:space="preserve">
+  <data name="social_patreon" xml:space="preserve">
     <value></value>
   </data>
   <data name="error_role_forbidden" xml:space="preserve">
