--- a/Miki/Languages/nl-NL.resx
+++ b/Miki/Languages/nl-NL.resx
@@ -2051,7 +2051,7 @@ Je hebt allerminst **{0}** ervaringspunten nodig voordat je in dit gilde gebruik
   <data name="term_roles" xml:space="preserve">
     <value></value>
   </data>
-  <data name="socMiki.Frameworkl_patreon" xml:space="preserve">
+  <data name="social_patreon" xml:space="preserve">
     <value></value>
   </data>
   <data name="error_role_forbidden" xml:space="preserve">
