--- a/Miki/Languages/pl-PL.resx
+++ b/Miki/Languages/pl-PL.resx
@@ -1921,7 +1921,7 @@ Użyta: {0} razy.</comment>
   <data name="term_roles" xml:space="preserve">
     <value></value>
   </data>
-  <data name="socMiki.Frameworkl_patreon" xml:space="preserve">
+  <data name="social_patreon" xml:space="preserve">
     <value></value>
   </data>
   <data name="error_role_forbidden" xml:space="preserve">
