--- a/Miki/Languages/pt-BR.resx
+++ b/Miki/Languages/pt-BR.resx
@@ -1961,7 +1961,7 @@ Resposta: uma formiga procurando emprego!
   <data name="term_roles" xml:space="preserve">
     <value></value>
   </data>
-  <data name="socMiki.Frameworkl_patreon" xml:space="preserve">
+  <data name="social_patreon" xml:space="preserve">
     <value></value>
   </data>
   <data name="error_role_forbidden" xml:space="preserve">
