--- a/Miki/Languages/pt-PT.resx
+++ b/Miki/Languages/pt-PT.resx
@@ -1964,7 +1964,7 @@ Fuzzy</comment>
   <data name="term_roles" xml:space="preserve">
     <value></value>
   </data>
-  <data name="socMiki.Frameworkl_patreon" xml:space="preserve">
+  <data name="social_patreon" xml:space="preserve">
     <value></value>
   </data>
   <data name="error_role_forbidden" xml:space="preserve">
