--- a/Miki/Languages/sv-SE.resx
+++ b/Miki/Languages/sv-SE.resx
@@ -2030,7 +2030,7 @@ Du behöver minst **{0}** erfarenhetspoäng innan du kan använda detta kommando
   <data name="term_roles" xml:space="preserve">
     <value></value>
   </data>
-  <data name="socMiki.Frameworkl_patreon" xml:space="preserve">
+  <data name="social_patreon" xml:space="preserve">
     <value></value>
   </data>
   <data name="error_role_forbidden" xml:space="preserve">
