--- a/Miki/Languages/en-US.resx
+++ b/Miki/Languages/en-US.resx
@@ -597,7 +597,7 @@ Fuzzy</comment>
   <data name="miki_module_pasta_search_error_no_results" xml:space="preserve">
     <value>Sorry, but we couldn't find a pasta with `{0}`</value>
   </data>
-  <data name="miki_module_pasta_search_footer" xml:space="preserve">
+  <data name="page_footer" xml:space="preserve">
     <value>page {0} of {1}</value>
   </data>
   <data name="miki_module_pasta_search_header" xml:space="preserve">
@@ -2029,5 +2029,8 @@ To give someone reputation, do `&gt;rep &lt;mention&gt; ["all"|amount]`</value>
   </data>
   <data name="error_background_not_owned" xml:space="preserve">
     <value>You don't have this background unlocked!</value>
+  </data>
+  <data name="error_session_in_use" xml:space="preserve">
+    <value>I'm already waiting for a response from you in this channel. Please finish your previous actions first!</value>
   </data>
 </root>
