--- a/Miki/Languages/en-US.resx
+++ b/Miki/Languages/en-US.resx
@@ -537,7 +537,7 @@ Fuzzy</comment>
     <value>No images found on your search :(</value>
   </data>
   <data name="miki_module_pasta_create_error_already_exist" xml:space="preserve">
-    <value>This pasta already exists! Try a different name.</value>
+    <value>Pasta with name {0} already exists! Try a different name.</value>
   </data>
   <data name="miki_module_pasta_create_success" xml:space="preserve">
     <value>Created pasta `{0}`!</value>
