--- a/Miki/Languages/en-US.resx
+++ b/Miki/Languages/en-US.resx
@@ -2036,4 +2036,29 @@ To give someone reputation, do `&gt;rep &lt;mention&gt; ["all"|amount]`</value>
   <data name="whois_title" xml:space="preserve">
     <value>Who is {0}!?</value>
   </data>
+  <data name="guildbank_balance" xml:space="preserve">
+    <value>{0} mekos are currently stored in the guild bank.</value>
+  </data>
+  <data name="guildbank_balance_title" xml:space="preserve">
+    <value>Mekos</value>
+  </data>
+  <data name="guildbank_deposit_success" xml:space="preserve">
+    <value>You've successfully deposited {0} mekos!</value>
+  </data>
+  <data name="guildbank_deposit_title" xml:space="preserve">
+    <value>{0} deposited {1} mekos into the guild bank!</value>
+  </data>
+  <data name="guildbank_info_description" xml:space="preserve">
+    <value>This is your guild's bank, use it to store mekos to save up for guild upgrades!</value>
+  </data>
+  <data name="guildbank_info_help" xml:space="preserve">
+    <value>Commands</value>
+  </data>
+  <data name="guildbank_info_help_description" xml:space="preserve">
+    <value>{0}guildbank deposit &lt;mekos&gt; - to deposit the mekos to the bank
+{0}guildbank balance - to check the total money</value>
+  </data>
+  <data name="guildbank_title" xml:space="preserve">
+    <value>{0}'s savings</value>
+  </data>
 </root>
